<resources>
    <string name="app_name">FlixDB</string>
    <string name="item_description">Movie Poster</string>
    <string name="loader_message">Loading Movies</string>
    <string name="tv_loader_message">Loading Tv Shows</string>
    <string name="movie">Movies</string>
    <string name="home">Home</string>
    <string name="tv_show">TV Shows</string>

    <string name="action_most_popular">Most Popular</string>
    <string name="action_top_rated">Top Rated</string>
    <string name="action_favourite">Favourites</string>
    <string name ="action_search">Search</string>
    <string name="category">Choose Category</string>
    <string name="votes">votes</string>
    <string name="overview">Overview</string>
    <string name="cast">Cast</string>
    <string name="trailers">Trailers</string>
    <string name="episodes">Episodes</string>
    <string name="similar">Related Movies</string>
    <string name ="similarTv">Rlated TV Shows</string>
    <string name="reviews">Reviews</string>

    <string name="isTapToTargetShown">is Tap To Target Shown</string>
    <string name="dot_separator">dot separator</string>
    <string name="vote_count_icon">vote count icon</string>
    <string name="born_on">Born on</string>
</resources>
