<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_backdrop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_layout_height"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"
        app:layout_collapseMode="parallax"
        app:layout_collapseParallaxMultiplier="0.7"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/movie_header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:background="@android:color/transparent"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="God Father" />

        <TextView
            android:id="@+id/tv_movie_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="@+id/tv_movie_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_title"
            tools:text="2018" />

        <ImageView
            android:id="@+id/iv_dot_separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/dot_separator"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="@+id/tv_movie_release_date"
            app:layout_constraintStart_toEndOf="@+id/tv_movie_release_date"
            app:layout_constraintTop_toTopOf="@+id/tv_movie_release_date"
            app:srcCompat="@drawable/dot_icon" />

        <TextView
            android:id="@+id/tv_movie_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="@+id/tv_movie_release_date"
            app:layout_constraintStart_toEndOf="@+id/iv_dot_separator"
            app:layout_constraintTop_toTopOf="@+id/tv_movie_release_date"
            app:layout_constraintVertical_bias="1.0"
            tools:text="English" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/vote_count_icon"
            app:layout_constraintEnd_toStartOf="@+id/tv_vote_average"
            app:layout_constraintTop_toTopOf="@+id/tv_vote_average"
            app:srcCompat="@drawable/star_face_icon" />

        <TextView
            android:id="@+id/tv_vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="8.5" />

        <TextView
            android:id="@+id/tv_vote_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:text="28700 votes" />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>

